# KBA

./: .gitignore  .gitmodules  LICENSE  README.md  attack.py  attack_dust3r.py  index.html  loss.py  pyproject.toml  test.py  utils.py
configs/: view_5.py
data/carriers/disc/: carrier.mtl
renderer/: data_loader_attack.py  data_loader_test.py
renderer/cameras/: __init__.py  cameras.py  cameras_two_view.py
renderer/carrier/: __init__.py  carrier.py  carrier_adversarial.py
renderer/carrier/mesh/: __init__.py  mesh_disc.py
renderer/carrier/texture/: __init__.py  color_management_system.py  texture_disc.py  texture_pie.py
renderer/environments/: environments.py
renderer/lights/: __init__.py  point_light.py
renderer/postprocess/: gaussian_noise.py  post_process.py  straightforward.py
renderer/victims/: __init__.py  victims.py
